--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
         <link href='css/map.css' rel='stylesheet' />
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
         <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+		<script src="js/L.Map.Sync.js"></script>
+		<script src="js/geostats.min.js"></script>
 		<script src="data/NRCS_data.js"></script>
         <script src="data/styles.js"></script>
-        <script src="data/legends.js"></script>
         <script src="data/world.js"></script>
         <script type="text/javascript">var _gaq = _gaq || [];
             _gaq.push(['_setAccount', 'UA']);
@@ -29,28 +30,110 @@
     <body>
         <!-- Page content -->
         <div class="container dashboard">
-			<div class="row">
-				<div class="col-md-4">
+			<div class="row" class="line">
+				<div class="col-md-3">
 					<h2>NRCS - SitRep</h2>
 					<p class="subtitle">Earthquake 2015 - Situation Report</p>
 				</div>
-				<div class="col-md-8 spacersm">
+				<div class="col-md-5 spacersm" align="center">
 					<p>
-					For feedback email <a href="mailto:raimbault.bruno@gmail.com?subject=WASHinHCF-Feedback">raimbault.bruno@gmail.com</a>
+					<img src="http://www.nrcs.org/sites/all/themes/nrcs/logo.png" height="28">
+					<img src="http://www.ifrc.org/Global/ifrc.org/Logos/IFRC-logo.gif" height="22">
+					<br/>
+					<i>Report published the 15th of June 2015</i>
 					</p>
+				</div>
+				<div class="col-md-4 spacersm">
 					<p>
-					Source: <a href="" target="_blank">Nepal Red Cross Society </a> - Report published the 15th of June 2015
+					Source: <a href="www.nrcs.org" target="_blank">Nepal Red Cross Society </a> <br/>
+					Produced by SIMS supported by ARC and BRC<br/>
+					For feedback email: <a href="mailto:braimbault@redcross.org.uk?subject=NRCSSitRep-online-Feedback">braimbault@redcross.org.uk</a>
 					</p>
 				</div>
 			</div>
-			
-            <div class="row">
-            	<br />
-                Choose layers to add and remove using the button on the top right of the map.</p>
-            	<br />
-                <div id='map' class="col-md-12" style="height: 500px"></div>
-                <br />
-            </div>
+			<div class="row">
+				<div class="col-md-12">
+					<br />
+					<p>Choose layers to add and remove using the button on the top right of the maps. Hover the maps with the house to display figures at District level.</p>
+					<br />
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-8">
+					<div class="row">
+						<div id='map1' style="height: 300px"></div>
+					<br />
+					</div>
+				</div>
+				<div class="col-md-4">
+					<br />
+					<div class="row">
+						<div id="dmg_dis" class="col-md-4"><b>District</b></div>
+						<div class="col-md-3"><b>Total</b></div>
+						<div class="col-md-5"><b>Damage Type</b></div>
+						<div class="line"><br /></div>
+						<div id="dmg_dis_1" class="col-md-4"  align="right">-</div>
+						<div id="dmg_full_1" class="col-md-3" align="right">-</div>
+						<div class="col-md-5">Dead People</div>
+						<div id="dmg_dis_2" class="col-md-4"  align="right">-</div>
+						<div id="dmg_full_2" class="col-md-3"  align="right">-</div>
+						<div class="col-md-5">Missing People</div>
+						<div id="dmg_dis_3" class="col-md-4"  align="right">-</div>
+						<div id="dmg_full_3" class="col-md-3"  align="right">-</div>
+						<div class="col-md-5">Injured People</div>
+						<div id="dmg_dis_4" class="col-md-4"  align="right">-</div>
+						<div id="dmg_full_4" class="col-md-3"  align="right">-</div>
+						<div class="col-md-5">Affected Families</div>
+						<div id="dmg_dis_5" class="col-md-4"  align="right">-</div>
+						<div id="dmg_full_5" class="col-md-3"  align="right">-</div>
+						<div class="col-md-5">Displaced Families</div>
+						<div id="dmg_dis_6" class="col-md-4"  align="right">-</div>
+						<div id="dmg_full_6" class="col-md-3"  align="right">-</div>
+						<div class="col-md-5">Fully Dest. Houses</div>
+						<div id="dmg_dis_7" class="col-md-4"  align="right">-</div>
+						<div id="dmg_full_7" class="col-md-3"  align="right">-</div>
+						<div class="col-md-5">Partially Dest. Houses</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">	
+				<div class="col-md-8">
+					<div class="row">
+						<div id='map2' style="height: 300px"></div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<br />
+					<div>
+					<div class="row">						
+						<div id="dist_dis" class="col-md-4"><b>District</b></div>
+						<div class="col-md-3"><b>Total</b></div>
+						<div class="col-md-5"><b>Distribution Item</b></div>
+						<div class="line"><br /></div>
+						<div id="dist_dis_1" class="col-md-4"  align="right">-</div>
+						<div id="dist_full_1" class="col-md-3"  align="right">-</div>
+						<div class="col-md-5">NFRI-Full-set</div>
+						<div id="dist_dis_2" class="col-md-4"  align="right">-</div>
+						<div id="dist_full_2" class="col-md-3"  align="right">-</div>
+						<div class="col-md-5">Tarpaulin</div>
+						<div id="dist_dis_3" class="col-md-4"  align="right">-</div>
+						<div id="dist_full_3" class="col-md-3"  align="right">-</div>
+						<div class="col-md-5">Blankets</div>
+						<div id="dist_dis_4" class="col-md-4"  align="right">-</div>
+						<div id="dist_full_4" class="col-md-3"  align="right">-</div>
+						<div class="col-md-5">ORS</div>
+						<div id="dist_dis_5" class="col-md-4"  align="right">-</div>
+						<div id="dist_full_5" class="col-md-3"  align="right">-</div>
+						<div class="col-md-5">Hygiene-kits</div>
+						<div id="dist_dis_6" class="col-md-4"  align="right">-</div>
+						<div id="dist_full_6" class="col-md-3"  align="right">-</div>
+						<div class="col-md-5">Aqua-Tab</div>
+						<div id="dist_dis_7" class="col-md-4"  align="right">-</div>
+						<div id="dist_full_7" class="col-md-3"  align="right">-</div>
+						<div class="col-md-5">Soap</div>
+					</div>
+				</div>
+			</div>
         </div>
         <script src="js/main.js"></script>
     </body>
