--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<div class="row">
 				<div class="col-md-8">
 					<div class="row">
-						<div id='map1' style="height: 300px"></div>
+						<div id='map1' style="height: 280px"></div>
 					<br />
 					</div>
 				</div>
@@ -99,7 +99,7 @@
 			<div class="row">	
 				<div class="col-md-8">
 					<div class="row">
-						<div id='map2' style="height: 300px"></div>
+						<div id='map2' style="height: 280px"></div>
 					</div>
 				</div>
 				<div class="col-md-4">
@@ -108,7 +108,7 @@
 					<div class="row">						
 						<div id="dist_dis" class="col-md-4"><b>District</b></div>
 						<div class="col-md-3"><b>Total</b></div>
-						<div class="col-md-5"><b>Distribution Item</b></div>
+						<div class="col-md-5"><b>Distributed Item</b></div>
 						<div class="line"><br /></div>
 						<div id="dist_dis_1" class="col-md-4"  align="right">-</div>
 						<div id="dist_full_1" class="col-md-3"  align="right">-</div>
@@ -131,6 +131,54 @@
 						<div id="dist_dis_7" class="col-md-4"  align="right">-</div>
 						<div id="dist_full_7" class="col-md-3"  align="right">-</div>
 						<div class="col-md-5">Soap</div>
+					</div>
+				</div>
+			</div>
+        </div>
+        <div class="row">
+        	<br />
+        </div>	
+        <div class="row">	
+				<div class="col-md-8">
+					<div class="row">
+						<div id='map3' style=" height:280px"></div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<br />
+					<div>
+					<div class="row">					
+						<div id="vol_dis" class="col-md-4"><b>District</b></div>
+						<div class="col-md-3"><b>Total</b></div>
+						<div class="col-md-5"><b>Responders</b></div>
+						<div class="line"><br /></div>
+						<div id="vol_dis_1" class="col-md-4"  align="right">-</div>
+						<div id="vol_full_1" class="col-md-3"  align="right">-</div>
+						<div class="col-md-5">FA</div>
+						<div id="vol_dis_2" class="col-md-4"  align="right">-</div>
+						<div id="vol_full_2" class="col-md-3"  align="right">-</div>
+						<div class="col-md-5">CADRE/Rescue</div>
+						<div id="vol_dis_3" class="col-md-4"  align="right">-</div>
+						<div id="vol_full_3" class="col-md-3"  align="right">-</div>
+						<div class="col-md-5">NDRT</div>
+						<div id="vol_dis_4" class="col-md-4"  align="right">-</div>
+						<div id="vol_full_4" class="col-md-3"  align="right">-</div>
+						<div class="col-md-5">PSS</div>
+						<div id="vol_dis_5" class="col-md-4"  align="right">-</div>
+						<div id="vol_full_5" class="col-md-3"  align="right">-</div>
+						<div class="col-md-5">RFL/DBM</div>
+						<div id="vol_dis_6" class="col-md-4"  align="right">-</div>
+						<div id="vol_full_6" class="col-md-3"  align="right">-</div>
+						<div class="col-md-5">WASH</div>
+						<div id="vol_dis_7" class="col-md-4"  align="right">-</div>
+						<div id="vol_full_7" class="col-md-3"  align="right">-</div>
+						<div class="col-md-5">DDRT</div>
+						<div id="vol_dis_8" class="col-md-4"  align="right">-</div>
+						<div id="vol_full_8" class="col-md-3"  align="right">-</div>
+						<div class="col-md-5">Other</div>
+						<div id="vol_dis_9" class="col-md-4"  align="right">-</div>
+						<div id="vol_full_9" class="col-md-3"  align="right">-</div>
+						<div class="col-md-5">International Delegates/Volunteers</div>
 					</div>
 				</div>
 			</div>
