--- a/index.html
+++ b/index.html
@@ -178,8 +178,11 @@
 						<div class="col-md-5">Other</div>
 						<div id="vol_dis_9" class="col-md-4"  align="right">-</div>
 						<div id="vol_full_9" class="col-md-3"  align="right">-</div>
-						<div class="col-md-5">International Delegates/Volunteers</div>
-					</div>
+						<div class="col-md-5">Intnl. Deleg./Vol.</div>
+						<div id="vol_dis_10" class="col-md-4"  align="right">-</div>
+						<div id="vol_full_10" class="col-md-3"  align="right">-</div>
+						<div class="col-md-5">All</div>
+						</div>
 				</div>
 			</div>
         </div>
