--- a/index.html
+++ b/index.html
@@ -66,30 +66,29 @@
 					</div>
 				</div>
 				<div class="col-md-4">
-					<br />
 					<div class="row">
 						<div id="dmg_dis" class="col-md-4" align="right"><b>District</b></div>
 						<div class="col-md-3" align="right"><b>Total</b></div>
-						<div class="col-md-5"><b>Damage Type</b></div>
+						<div class="col-md-5"><b>Damage Type</b><div style='line-height:95%'><br /></div></div>
 						<div class="line"><br /></div>
 						<div id="dmg_dis_1" class="col-md-4"  align="right">-</div>
 						<div id="dmg_full_1" class="col-md-3" align="right">-</div>
-						<div class="col-md-5">Dead People</div>
+						<div class="col-md-5">Dead People<div style='line-height:95%'><br /></div></div>
 						<div id="dmg_dis_2" class="col-md-4"  align="right">-</div>
 						<div id="dmg_full_2" class="col-md-3"  align="right">-</div>
-						<div class="col-md-5">Missing People</div>
+						<div class="col-md-5">Missing People<div style='line-height:95%'><br /></div></div>
 						<div id="dmg_dis_3" class="col-md-4"  align="right">-</div>
 						<div id="dmg_full_3" class="col-md-3"  align="right">-</div>
-						<div class="col-md-5">Injured People</div>
+						<div class="col-md-5">Injured People<div style='line-height:95%'><br /></div></div>
 						<div id="dmg_dis_4" class="col-md-4"  align="right">-</div>
 						<div id="dmg_full_4" class="col-md-3"  align="right">-</div>
-						<div class="col-md-5">Affected Families</div>
+						<div class="col-md-5">Affected Families<div style='line-height:95%'><br /></div></div>
 						<div id="dmg_dis_5" class="col-md-4"  align="right">-</div>
 						<div id="dmg_full_5" class="col-md-3"  align="right">-</div>
-						<div class="col-md-5">Displaced Families</div>
+						<div class="col-md-5">Displaced Families<div style='line-height:95%'><br /></div></div>
 						<div id="dmg_dis_6" class="col-md-4"  align="right">-</div>
 						<div id="dmg_full_6" class="col-md-3"  align="right">-</div>
-						<div class="col-md-5">Fully Dest. Houses</div>
+						<div class="col-md-5">Fully Dest. Houses<div style='line-height:95%'><br /></div></div>
 						<div id="dmg_dis_7" class="col-md-4"  align="right">-</div>
 						<div id="dmg_full_7" class="col-md-3"  align="right">-</div>
 						<div class="col-md-5">Partially Dest. Houses</div>
@@ -103,34 +102,33 @@
 					</div>
 				</div>
 				<div class="col-md-4">
-					<br />
 					<div>
 					<div class="row">						
 						<div id="dist_dis" class="col-md-4" align="right"><b>District</b></div>
 						<div class="col-md-3" align="right"><b>Total</b></div>
-						<div class="col-md-5"><b>Distributed Item</b></div>
+						<div class="col-md-5"><b>Distributed Item</b><div style='line-height:95%'><br /></div></div>
 						<div class="line"><br /></div>
 						<div id="dist_dis_1" class="col-md-4"  align="right">-</div>
 						<div id="dist_full_1" class="col-md-3"  align="right">-</div>
-						<div class="col-md-5">NFRI-Full-set</div>
+						<div class="col-md-5">NFRI-Full-set<div style='line-height:95%'><br /></div></div>
 						<div id="dist_dis_2" class="col-md-4"  align="right">-</div>
 						<div id="dist_full_2" class="col-md-3"  align="right">-</div>
-						<div class="col-md-5">Tarpaulin</div>
+						<div class="col-md-5">Tarpaulin<div style='line-height:95%'><br /></div></div>
 						<div id="dist_dis_3" class="col-md-4"  align="right">-</div>
 						<div id="dist_full_3" class="col-md-3"  align="right">-</div>
-						<div class="col-md-5">Blankets</div>
+						<div class="col-md-5">Blankets<div style='line-height:95%'><br /></div></div>
 						<div id="dist_dis_4" class="col-md-4"  align="right">-</div>
 						<div id="dist_full_4" class="col-md-3"  align="right">-</div>
-						<div class="col-md-5">ORS</div>
+						<div class="col-md-5">ORS<div style='line-height:95%'><br /></div></div>
 						<div id="dist_dis_5" class="col-md-4"  align="right">-</div>
 						<div id="dist_full_5" class="col-md-3"  align="right">-</div>
-						<div class="col-md-5">Hygiene-kits</div>
+						<div class="col-md-5">Hygiene-kits<div style='line-height:95%'><br /></div></div>
 						<div id="dist_dis_6" class="col-md-4"  align="right">-</div>
 						<div id="dist_full_6" class="col-md-3"  align="right">-</div>
-						<div class="col-md-5">Aqua-Tab</div>
+						<div class="col-md-5">Aqua-Tab<div style='line-height:95%'><br /></div></div>
 						<div id="dist_dis_7" class="col-md-4"  align="right">-</div>
 						<div id="dist_full_7" class="col-md-3"  align="right">-</div>
-						<div class="col-md-5">Soap</div>
+						<div class="col-md-5">Soap<div style='line-height:95%'><br /></div></div>
 					</div>
 				</div>
 			</div>
@@ -145,40 +143,39 @@
 					</div>
 				</div>
 				<div class="col-md-4">
-					<br />
 					<div>
 					<div class="row">					
 						<div id="vol_dis" class="col-md-4" align="right"><b>District</b></div>
 						<div class="col-md-3" align="right"><b>Total</b></div>
-						<div class="col-md-5"><b>Responders</b></div>
+						<div class="col-md-5"><b>Responders</b><div style='line-height:95%'><br /></div></div>
 						<div class="line"><br /></div>
 						<div id="vol_dis_1" class="col-md-4"  align="right">-</div>
 						<div id="vol_full_1" class="col-md-3"  align="right">-</div>
-						<div class="col-md-5">FA</div>
+						<div class="col-md-5">FA<div style='line-height:95%'><br /></div></div>
 						<div id="vol_dis_2" class="col-md-4"  align="right">-</div>
 						<div id="vol_full_2" class="col-md-3"  align="right">-</div>
-						<div class="col-md-5">CADRE/Rescue</div>
+						<div class="col-md-5">CADRE/Rescue<div style='line-height:95%'><br /></div></div>
 						<div id="vol_dis_3" class="col-md-4"  align="right">-</div>
 						<div id="vol_full_3" class="col-md-3"  align="right">-</div>
-						<div class="col-md-5">NDRT</div>
+						<div class="col-md-5">NDRT<div style='line-height:95%'><br /></div></div>
 						<div id="vol_dis_4" class="col-md-4"  align="right">-</div>
 						<div id="vol_full_4" class="col-md-3"  align="right">-</div>
-						<div class="col-md-5">PSS</div>
+						<div class="col-md-5">PSS<div style='line-height:95%'><br /></div></div>
 						<div id="vol_dis_5" class="col-md-4"  align="right">-</div>
 						<div id="vol_full_5" class="col-md-3"  align="right">-</div>
-						<div class="col-md-5">RFL/DBM</div>
+						<div class="col-md-5">RFL/DBM<div style='line-height:95%'><br /></div></div>
 						<div id="vol_dis_6" class="col-md-4"  align="right">-</div>
 						<div id="vol_full_6" class="col-md-3"  align="right">-</div>
-						<div class="col-md-5">WASH</div>
+						<div class="col-md-5">WASH<div style='line-height:95%'><br /></div></div>
 						<div id="vol_dis_7" class="col-md-4"  align="right">-</div>
 						<div id="vol_full_7" class="col-md-3"  align="right">-</div>
-						<div class="col-md-5">DDRT</div>
+						<div class="col-md-5">DDRT<div style='line-height:95%'><br /></div></div>
 						<div id="vol_dis_8" class="col-md-4"  align="right">-</div>
 						<div id="vol_full_8" class="col-md-3"  align="right">-</div>
-						<div class="col-md-5">Other</div>
+						<div class="col-md-5">Other<div style='line-height:95%'><br /></div></div>
 						<div id="vol_dis_9" class="col-md-4"  align="right">-</div>
 						<div id="vol_full_9" class="col-md-3"  align="right">-</div>
-						<div class="col-md-5">Intnl. Deleg./Vol.</div>
+						<div class="col-md-5">Intnl. Deleg./Vol.<div style='line-height:95%'><br /></div></div>
 						<div id="vol_dis_10" class="col-md-4"  align="right">-</div>
 						<div id="vol_full_10" class="col-md-3"  align="right">-</div>
 						<div class="col-md-5">All</div>
